<resources>
    <string name="app_name">DataBindingDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="user_firstname">user firstname : </string>
    <string name="user_lastname">user lastname : </string>
    <string name="user_name">user name : </string>
    <string name="user_age">user age : </string>
    <string name="is_adult">is adult?</string>

    <string name="company_name">company name : </string>
    <string name="company_age">company age : </string>
    <string name="company_employee">company employee ： </string>

    <string name="list_index">list[index] : </string>
    <string name="sparse_index">sparse[index] : </string>
    <string name="map_key">map[key] : </string>

    <string name="basic_binding">Basic Binding</string>
    <string name="custom_binding">Custom Binding</string>
    <string name="include_binding">Include Binding</string>
    <string name="expression_test">Expression Test</string>
    <string name="collection_test">Collection Test</string>
    <string name="observable_test">Observable Test</string>
</resources>
